# MASEval

./: .gitignore  .readthedocs.yaml  BENCHMARKS.md  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml  ty-check.yml
docs/benchmark/: mmlu.md
docs/interface/inference/: huggingface.md
docs/reference/: exceptions.md
examples/mmlu_benchmark/: .gitignore  README.md  __init__.py  extract_disco_weights.py  lm_eval_wrapper.py  mmlu_benchmark.py
examples/mmlu_benchmark/huggingface_disco/: README.md  __init__.py  build_data_repo.py  build_repo.py  configuration_disco.py  modeling_disco.py
flattened-MMLU/: README.md
maseval/: __init__.py
maseval/benchmark/mmlu/: __init__.py  mmlu.py
maseval/core/: agent.py  benchmark.py  exceptions.py  model.py  task.py
maseval/core/callbacks/: result_logger.py
maseval/interface/inference/: __init__.py  huggingface.py  huggingface_scorer.py
tests/: README.md
tests/test_benchmark/: test_mmlu_disco_identity.py
tests/test_benchmarks/test_mmlu/: __init__.py  test_benchmark.py  test_integration.py  test_mmlu_unit.py
tests/test_core/: test_exceptions.py  test_message_history.py  test_queue.py  test_task_protocol.py
tests/test_core/test_callbacks/: test_file_result_logger.py  test_result_logger.py
