[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maseval"
version = "0.3.0"
description = "A library for multi-agent systems evaluation and benchmarking."
authors = [{ name = "Cornelius Emde", email = "cornelius@parameterlab.de" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gitpython==3.1.46",
    "tqdm>=4.66.0",
    "rich>=14.1.0",
    "pydantic>=2.12.5",
]

# Enable optional dependencies for end users
[project.optional-dependencies]
# Agent frameworks
smolagents = ["smolagents>=1.21.3"]
langgraph = ["langgraph>=0.6.0"]
llamaindex = ["llama-index-core>=0.12.0"]

# Inference engines
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.107.2"]
google-genai = ["google-genai>=1.37.0"]
transformers = ["transformers==4.57.1"]
litellm = ["litellm>=1.0.0"]

# Logging
wandb = ["wandb==0.24.0"]
langfuse = ["langfuse>=3.3.4"]

# LM Evaluation Harness (for HuggingFaceMMLUBenchmark.precompute_all_logprobs_lmeval)
lm-eval = ["lm-eval @ git+https://github.com/arubique/lm-evaluation-harness.git@main"]

# DISCO prediction (for MMLU benchmark example)
disco = [
    "click>=8.1.0",
    "datasets==4.4.1",
    "gdown>=4.6.0",
    "h5py>=3.0.0",
    "ipython>=8.0.0",
    "jsonlines>=4.0.0",
    "lm-eval @ git+https://github.com/arubique/lm-evaluation-harness.git@main",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.11.0",
    "stnd @ git+https://github.com/arubique/stnd.git@0d23b52f7742c08b28be560d2d52d450fcd274b7",
    "tiktoken>=0.5.0",
    "torch==2.9.1",
    "torchvision>=0.15.0",
    "typer>=0.9.0",
    "umap-learn>=0.5.0",
]

# Dependencies for running examples (only what's actually used)
examples = [
    "maseval[smolagents,langgraph,llamaindex,anthropic,openai,google-genai,litellm,langfuse,disco]",
    # Additional integrations used in examples
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "typing-extensions>=4.0.0",
    "mcp>=1.22.0",
    "python-dotenv>=1.0.0",
    # Jupyter notebook support
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
    "accelerate==1.11.0",
]

# Complete installation with absolutely everything (uses self-reference for DRY)
all = ["maseval[examples,transformers,wandb]"]

[project.urls]
"Homepage" = "https://github.com/parameterlab/MASEval"
"Bug Tracker" = "https://github.com/parameterlab/MASEval/issues"
"Documentation" = "https://maseval.readthedocs.io/en/stable/"
"Changelog" = "https://github.com/parameterlab/MASEval/blob/main/CHANGELOG.md"

# Align transitive deps with disco-public env (disco_env_lm_eval) for MMLU identity test
[tool.uv]
override-dependencies = [
    "absl-py==2.3.1",
    "aiohttp==3.13.3",
    "anyio==4.12.1",
    "certifi==2026.1.4",
    "filelock==3.20.3",
    "google-auth==2.41.1",
    "google-auth-oauthlib==1.2.3",
    "httplib2==0.31.1",
    "numpy==2.3",
    "nvidia-nvshmem-cu12==3.3.20",
    "pillow==12.1.0",
    "protobuf==6.33.4",
    "psutil==7.2.1",
    "pyarrow==22.0.0",
    "pyparsing==3.3.1",
    "regex==2026.1.15",
    "sentry-sdk==2.49.0",
    "tokenizers==0.22.2",
    "triton==3.5.1",
    "urllib3==2.6.3",
]

[dependency-groups]
# Development tools (linting, testing) - for contributors only
dev = ["pytest>=9.0.0", "pytest-cov>=7.0.0", "ruff>=0.14.0", "ty>=0.0.5", "pre-commit>=4.0.0"]

# Documentation building - for contributors only
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-jupyter>=0.24.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
]

[tool.setuptools]
packages = ["maseval"]

[tool.ruff]
line-length = 144
exclude = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "core: Core tests that don't require optional dependencies",
    "interface: Tests that require optional dependencies (smolagents, langgraph, etc.)",
    "contract: Cross-implementation contract tests that validate framework-agnostic abstraction",
    "benchmark: Benchmark-specific tests (MACS, etc.) that test benchmark implementations, not core library",
    "smolagents: Tests that specifically require smolagents",
    "langgraph: Tests that specifically require langgraph",
    "llamaindex: Tests that specifically require llama-index-core",
    "slow: Slow tests that require significant resources (GPU, long runtime)",
]

[tool.coverage.run]
relative_files = true
source = ["maseval"]
omit = ["*/tests/*", "*/examples/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"

[tool.ty.src]
# Exclude notebooks and docs/examples from type checking
# These contain local imports that are only valid when run from their directory
exclude = ["docs/examples/", "examples/"]
